--- a/package.json
+++ b/package.json
@@ -11,18 +11,20 @@
     },
     "devDependencies": {
         "@inertiajs/inertia": "^0.10.0",
-        "@inertiajs/inertia-vue3": "^0.5.1",
+        "@inertiajs/inertia-vue": "^0.7.2",
         "@inertiajs/progress": "^0.2.6",
-        "@tailwindcss/forms": "^0.4.0",
+        "@tailwindcss/forms": "^0.2.1",
         "@vue/compiler-sfc": "^3.0.5",
         "autoprefixer": "^10.2.4",
         "axios": "^0.21",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
+        "portal-vue": "^2.1.7",
         "postcss": "^8.2.13",
         "postcss-import": "^14.0.1",
-        "tailwindcss": "^3.0.0",
-        "vue": "^3.0.5",
-        "vue-loader": "^16.1.2"
+        "tailwindcss": "^2.1.2",
+        "vue": "^2.6.14",
+        "vue-loader": "^15.9.8",
+        "vue-template-compiler": "^2.6.14"
     }
 }
